--- a/src/_metronic/i18n/messages/en.json
+++ b/src/_metronic/i18n/messages/en.json
@@ -18,5 +18,12 @@
   "USER_PROFILE.INFO_CARD.UNIVERSITY_STUDIED": "Assigned universities",
   "USER_PROFILE.PROGRESS_BAR.AVAILABLE_COINS": "Available Staggers",
   "USER_PROFILE.ROLE.ROLE_USER": "User",
-  "USER_PROFILE.ROLE.ROLE_ADMIN": "Administrator"
+  "USER_PROFILE.ROLE.ROLE_ADMIN": "Administrator",
+
+  "NOTIFICATIONS.MARK_AS_READ": "Mark as read",
+  "NOTIFICATIONS.CATEGORY.ALERT": "Alerts",
+  "NOTIFICATIONS.CATEGORY.UPDATE": "Updates",
+  "NOTIFICATIONS.CATEGORY.LOG": "Logs",
+  "NOTIFICATIONS.VIEW_ALL": "Show all",
+  "NOTIFICATIONS.NOTHING": "Nothing to show"
 }
